<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="notifications"
        app:title="Notificações">

        <SwitchPreferenceCompat
            android:key="daily_notification"
            android:summaryOff="@string/daily_notification_off"
            android:summaryOn="@string/daily_notification_on"
            android:title="@string/daily_notification"
            app:key="daily_notification" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="display"
        app:title="Exibição">

        <ListPreference
            app:key="date_format"
            app:title="@string/date_format_title"
            app:summary="@string/date_format_summary"
            app:entries="@array/date_format_entries"
            app:entryValues="@array/date_format_entry_values"
            app:defaultValue="@string/date_format_value_short" />

    </PreferenceCategory>

</PreferenceScreen>